Подключил шрифт Inter

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путишествие по России</title>
+  <link rel="stylesheet" href="./fonts/fonts.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
@@ -63,8 +64,8 @@
                     <li class="place">
                         <h2 class="place__title">Куршская коса</h2>
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a href="http://park-kosa.ru" target="_blank" class="place__website__link">park-kosa.ru</a>
+                            <p class="place__website place__website_url-heading">URL</p>
+                            <a href="http://park-kosa.ru" target="_blank" class="place__website place__website_link">park-kosa.ru</a>
                         </div>
                         <img src="./images/place-kosa.jpg" class="place__image" alt="Куршская коса">
                         <div class="place__paragraph">
@@ -82,9 +83,9 @@
                     <li class="place">
                         <h2 class="place__title">Кольский</h2>
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
+                            <p class="place__website place__website_url-heading">URL</p>
                             <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
-                             class="place__website__link">National Geographic</a>
+                             class="place__website place__website_link">National Geographic</a>
                         </div>
                         <img src="./images/place-kolsky.jpg" class="place__image" alt="Кольский">
                         <div class="place__paragraph">
@@ -100,9 +101,9 @@
                     <li class="place">
                         <h2 class="place__title">Алтай</h2>
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
+                            <p class="place__website place__website_url-heading">URL</p>
                             <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
-                             class="place__website__link">Facebook</a>
+                             class="place__website place__website_link">Facebook</a>
                         </div>
                         <img src="./images/place-altai.jpg" class="place__image" alt="Алтай">
                         <div class="place__paragraph">
@@ -120,8 +121,8 @@
                     <li class="place">
                         <h2 class="place__title">Зимний Байкал</h2>
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a href="https://vk.com/baikalmile" target="_blank" class="place__website__link">https://vk.com/baikalmile</a>
+                            <p class="place__website place__website_url-heading">URL</p>
+                            <a href="https://vk.com/baikalmile" target="_blank" class="place__website place__website_link">https://vk.com/baikalmile</a>
                         </div>
                         <img src="./images/place-winter-baikal.jpg" class="place__image" alt="Зимний Байкал">
                         <div class="place__paragraph">
@@ -137,8 +138,8 @@
                     <li class="place">
                         <h2 class="place__title">Карелия</h2>
                         <div class="place__website">
-                            <p class="place__website__url-heading">URL</p>
-                            <a href="http://vodlozero.ru" target="_blank" class="place__website__link">http://vodlozero.ru/</a>
+                            <p class="place__website place__website_url-heading">URL</p>
+                            <a href="http://vodlozero.ru" target="_blank" class="place__website place__website_link">http://vodlozero.ru/</a>
                         </div>
                         <img src="./images/place-karelia.jpg" class="place__image" alt="Карелия">
                         <div>
