--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 
-<body>
+<body class="background-page">
     <div class="page">
         <header class="header">
             <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
