--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header class="header">
             <img src="./images/header-logo.svg" alt="Лого" class="header__logo">
             <ul class="header__lang-list">
-                <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a></li>
-                <li><a href="#" class="header__lang-link">En</a></li>
+                <li><a href="./index.html" class="header__lang-link header__lang-link_active">Ru</a></li>
+                <li><a href="./pages/indexEn.html" class="header__lang-link">En</a></li>
             </ul>
         </header>
 
